--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,8 @@
     <string name="title_activity_home_screen">HomeScreen</string>
     <string name = "create_group">Create New Group</string>
     <string name="join_group">Join Group</string>
+
+<!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_create_group">CreateGroup</string>
 </resources>
